--- a/.github/workflows/umbrella-ci.yml
+++ b/.github/workflows/umbrella-ci.yml
@@ -7,6 +7,7 @@ on:
     branches: [ main, develop ]
   schedule:
     - cron: '0 2 * * *'  # Nightly builds
+  workflow_dispatch:
 
 jobs:
   trigger-backend-services:
