CI: normalize backend-ci workflows, add gating, repo yamllint config; lint clean

--- a/.github/workflows/platform-umbrella.yml
+++ b/.github/workflows/platform-umbrella.yml
@@ -391,7 +391,7 @@ jobs:
     needs: push-images
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     environment:
-      name: production
+      name: "production"
       url: https://ticketing.example.com
     
     steps:
