CI: normalize workflows, add yamllint config, update docs and admin portal; lint clean

--- a/.github/workflows/admin-web-portal-ci.yml
+++ b/.github/workflows/admin-web-portal-ci.yml
@@ -63,6 +63,8 @@ jobs:
     defaults:
       run:
         working-directory: admin-web-portal
+    env:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -76,3 +78,8 @@ jobs:
             npm install
           fi
       - run: npm test -- --coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+        continue-on-error: true
