--- a/admin-web-portal/.github/workflows/frontend-ci.yml
+++ b/admin-web-portal/.github/workflows/frontend-ci.yml
@@ -23,6 +23,10 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    env:
+      VITE_API_URL: ${{ secrets.VITE_API_URL }}
+      VITE_ADMIN_SECRET: ${{ secrets.VITE_ADMIN_SECRET }}
+      VITE_CHART_API_KEY: ${{ secrets.VITE_CHART_API_KEY }}
     steps:
       - uses: actions/checkout@v4
       
@@ -63,6 +67,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: lint
+    env:
+      VITE_API_URL: ${{ secrets.VITE_API_URL }}
+      VITE_ADMIN_SECRET: ${{ secrets.VITE_ADMIN_SECRET }}
+      VITE_CHART_API_KEY: ${{ secrets.VITE_CHART_API_KEY }}
     
     steps:
       - uses: actions/checkout@v4
@@ -80,7 +88,7 @@ jobs:
         run: npm run build
       
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build
           path: dist/
@@ -88,6 +96,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: lint
+    env:
+      VITE_API_URL: ${{ secrets.VITE_API_URL }}
+      VITE_ADMIN_SECRET: ${{ secrets.VITE_ADMIN_SECRET }}
+      VITE_CHART_API_KEY: ${{ secrets.VITE_CHART_API_KEY }}
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     
     steps:
       - uses: actions/checkout@v4
@@ -106,19 +119,25 @@ jobs:
         continue-on-error: true
       
       - name: Upload coverage
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
         continue-on-error: true
 
   deploy-preview:
     runs-on: ubuntu-latest
     needs: [ build, test ]
     if: github.event_name == 'pull_request'
+    env:
+      VITE_API_URL: ${{ secrets.VITE_API_URL }}
+      VITE_ADMIN_SECRET: ${{ secrets.VITE_ADMIN_SECRET }}
+      VITE_CHART_API_KEY: ${{ secrets.VITE_CHART_API_KEY }}
     
     steps:
       - uses: actions/checkout@v4
       
       - name: Download build
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: build
       
