--- a/admin-web-portal/package.json
+++ b/admin-web-portal/package.json
@@ -17,13 +17,17 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.28.0",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "react-datepicker": "^6.12.0",
+    "date-fns": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/jest-dom": "^6.4.8",
     "eslint": "^8.57.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-import": "^2.29.1",
@@ -34,5 +38,10 @@
     "typescript": "^5.6.3",
     "vite": "^5.1.0",
     "vitest": "^1.6.1"
+  }
+  ,
+  "vitest": {
+    "environment": "jsdom",
+    "setupFiles": ["./vitest.setup.ts"]
   }
 }
